# Collective_perception

./: README.md
MNS/src/boilerplate/: CMakeLists.txt  Message.lua  Packet.lua  VNS.lua  boilerplate.argos  boilerplate_loop_functions.cpp  boilerplate_loop_functions.h  structure_quadcopter.lua  structure_vehicle.lua
MNS/src/boilerplate/VNSModules/: BoxAvoider.lua  Driver.lua  LostCounter.lua  Maintainer.lua  QuadcopterConnector.lua  RandomWalker.lua  Shifter.lua
MNS/src/boilerplate/math/: Linar.lua
MNS/src/boilerplate/testing/: avoider_quadcopter.lua  connectorTest_vehicle.lua  driverTest_vehicle.lua  driver_quadconnectorTest.argos  exavoider.argos  exavoider_quadcopter.lua  lostTest_quadcopter.lua  maintainerTest.argos  maintainerTest_quadcopter.lua  maintainerTest_vehicle.lua  msgTest_vehicle.lua  packetTest_vehicle.lua  pravoider.argos  randomTest_quadcopter.lua  randomTest_vehicle.lua  shifterTest_vehicle.lua  structure.argos  vnsTestFrameWork.argos  vnsTestFrameWork_vehicle.lua
Pheromone/src/boilerplate/: Message.lua  VNS.lua  boilerplate.argos  boilerplate_loop_functions.cpp  boilerplate_loop_functions.h  structure_quadcopter.lua  structure_vehicle.lua
Pheromone/src/boilerplate/VNSModules/: BoxAvoider.lua  Connector.lua  Driver.lua  Shifter.lua
Pheromone/src/boilerplate/testing/: assignTest.argos  (+14 more)
Voter-Mean/src/: CMakeLists.txt
Voter-Mean/src/boilerplate/: Message.lua  VNS.lua  boilerplate.argos  boilerplate_loop_functions.cpp  boilerplate_loop_functions.h  structure_quadcopter.lua  structure_vehicle.lua
Voter-Mean/src/cmake/: ARGoSBuildChecks.cmake
(+18 files in other folders)
